Only need vertical scrollbar, fixes #1116

--- a/web/assets/stylesheets/application.css
+++ b/web/assets/stylesheets/application.css
@@ -846,10 +846,10 @@ img.smallogo {
   border-radius: 3px;
 }
 .args {
-  overflow: scroll;
+  overflow-y: scroll;
   max-height: 100px;
 }
 .args-extended {
-  overflow: scroll;
+  overflow-y: scroll;
   max-height: 500px;
 }
